GNOME Bugzilla – Bug 709091
Forgetting network functionality in wifi history dialog is broken
Last modified: 2013-10-01 13:11:48 UTC
Forgetting networks doesn't work and instead we get a critical and empty rows.
Created attachment 256079 [details] [review] network: Just dismiss forget dialog if response is not OK If the dialog is deleted, for instance, we don't want to take that as OK.
Created attachment 256080 [details] [review] network: Get the correct widget holding the "connection" object data
Review of attachment 256079 [details] [review]: Yep.
Review of attachment 256080 [details] [review]: What does this fix? Better commit log please.
Created attachment 256093 [details] [review] network: Get the correct widget holding the "connection" object data The check button isn't a direct child of the GtkListBoxRow instance that contains the "connection" object data so we are adding the wrong widget to the "rows" list which then gives us a NULL for "connection" in really_forget() and making us fail to remove the connection.
Review of attachment 256093 [details] [review]: Yes.
Attachment 256079 [details] pushed as b68f742 - network: Just dismiss forget dialog if response is not OK Attachment 256093 [details] pushed as 1650293 - network: Get the correct widget holding the "connection" object data