network: Just dismiss forget dialog if response is not OK

If the dialog is deleted, for instance, we don't want to take that as
OK.

https://bugzilla.gnome.org/show_bug.cgi?id=709091